[gd_scene load_steps=12 format=3 uid="uid://cl7gj22hnfxog"]

[ext_resource type="Script" path="res://Scripts/finish_ui.gd" id="1_8cftm"]
[ext_resource type="Texture2D" uid="uid://dfyccu6jjdl6m" path="res://Arts/KeyboardControls/Fkey-removebg-preview.png" id="2_fgywl"]
[ext_resource type="Texture2D" uid="uid://b2y8j40kibhyg" path="res://Arts/KeyboardControls/Jkey-removebg-preview.png" id="3_yfqki"]
[ext_resource type="Texture2D" uid="uid://dktn1xtecq0uo" path="res://Arts/ControllerControls/RightButton-Photoroom.png" id="4_6ltl3"]
[ext_resource type="Texture2D" uid="uid://bydkn62u3q4p1" path="res://Arts/ControllerControls/RightButtonPS5-removebg-preview.png" id="5_nugpk"]
[ext_resource type="Texture2D" uid="uid://c4vdd0l6wp1fn" path="res://Arts/ControllerControls/RightButtonSwitch-removebg-preview.png" id="6_uhy2h"]
[ext_resource type="Texture2D" uid="uid://dr713eli87kg0" path="res://Arts/KeyboardControls/EscapeKeyboard-removebg-preview.png" id="7_m8y2d"]
[ext_resource type="Texture2D" uid="uid://ci3ltgm0c8j2r" path="res://Arts/ControllerControls/ShareController-removebg-preview.png" id="8_iicse"]
[ext_resource type="Texture2D" uid="uid://c83bhjcbi4555" path="res://Arts/ControllerControls/SelectController-removebg-preview.png" id="9_j43j2"]
[ext_resource type="Texture2D" uid="uid://c6p5gufsd8e34" path="res://Arts/ControllerControls/-SwitchController-removebg-preview.png" id="10_a00tp"]
[ext_resource type="AudioStream" uid="uid://bcvsiyte7tk2m" path="res://Sound/Effects/ButtonEffect.wav" id="11_p5o4v"]

[node name="FinishUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8cftm")

[node name="FinishNextLevelButton" type="Button" parent="." groups=["finish_button"]]
z_index = 1
offset_left = 270.0
offset_top = 94.0
offset_right = 455.0
offset_bottom = 161.0
scale = Vector2(4.68579, 2.08)
focus_neighbor_left = NodePath("../FinishMenuButton")
focus_neighbor_top = NodePath("../FinishMenuButton")
focus_neighbor_right = NodePath("../FinishMenuButton")
focus_neighbor_bottom = NodePath("../FinishMenuButton")
focus_next = NodePath("../FinishMenuButton")
focus_previous = NodePath("../FinishMenuButton")
theme_override_font_sizes/font_size = 20
text = "Move to next level"

[node name="Sprite2D" type="Sprite2D" parent="FinishNextLevelButton"]
position = Vector2(67.0025, 79.3269)
scale = Vector2(0.102139, 0.216413)
texture = ExtResource("2_fgywl")

[node name="Sprite2D" type="Sprite2D" parent="FinishNextLevelButton/Sprite2D"]
position = Vector2(334.109, 0)
texture = ExtResource("3_yfqki")

[node name="Sprite2D2" type="Sprite2D" parent="FinishNextLevelButton"]
position = Vector2(43.073, 140.385)
scale = Vector2(0.395391, 0.979302)
texture = ExtResource("4_6ltl3")

[node name="Sprite2D" type="Sprite2D" parent="FinishNextLevelButton/Sprite2D2"]
position = Vector2(100.518, 0.490944)
scale = Vector2(0.743998, 0.784597)
texture = ExtResource("5_nugpk")

[node name="Sprite2D2" type="Sprite2D" parent="FinishNextLevelButton/Sprite2D2"]
position = Vector2(215.771, 0)
texture = ExtResource("6_uhy2h")

[node name="FinishMenuButton" type="Button" parent="." groups=["finish_button"]]
z_index = 5
offset_left = -1008.0
offset_top = 88.0
offset_right = -847.0
offset_bottom = 148.0
scale = Vector2(4.6, 2.24)
focus_neighbor_left = NodePath("../FinishNextLevelButton")
focus_neighbor_top = NodePath("../FinishNextLevelButton")
focus_neighbor_right = NodePath("../FinishNextLevelButton")
focus_neighbor_bottom = NodePath("../FinishNextLevelButton")
focus_next = NodePath("../FinishNextLevelButton")
focus_previous = NodePath("../FinishNextLevelButton")
theme_override_font_sizes/font_size = 20
text = "Return to menu
"

[node name="Sprite2D" type="Sprite2D" parent="FinishMenuButton"]
position = Vector2(75.2174, 74.1071)
scale = Vector2(0.0494642, 0.0892298)
texture = ExtResource("7_m8y2d")

[node name="Sprite2D2" type="Sprite2D" parent="FinishMenuButton"]
position = Vector2(40.8696, 132.143)
scale = Vector2(0.285056, 0.405204)
texture = ExtResource("8_iicse")

[node name="Sprite2D" type="Sprite2D" parent="FinishMenuButton/Sprite2D2"]
position = Vector2(119.969, -0.0991861)
texture = ExtResource("9_j43j2")

[node name="Sprite2D2" type="Sprite2D" parent="FinishMenuButton/Sprite2D2"]
position = Vector2(242.752, -0.0991861)
texture = ExtResource("10_a00tp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 269.0
offset_top = 91.0
offset_right = 309.0
offset_bottom = 169.0
scale = Vector2(21.5847, 4.65847)
color = Color(0.0923971, 0.0923971, 0.092397, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1007.0
offset_top = 88.0
offset_right = -967.0
offset_bottom = 158.0
scale = Vector2(18.36, 5.16)
color = Color(0.0923971, 0.0923971, 0.092397, 1)

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_p5o4v")

[connection signal="focus_entered" from="FinishNextLevelButton" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="FinishNextLevelButton" to="." method="_on_finish_next_level_button_focus_exited"]
[connection signal="gui_input" from="FinishNextLevelButton" to="." method="_on_finish_next_level_button_gui_input"]
[connection signal="mouse_entered" from="FinishNextLevelButton" to="." method="_on_finish_next_level_button_mouse_entered"]
[connection signal="mouse_exited" from="FinishNextLevelButton" to="." method="_on_next_level_mouse_exited"]
[connection signal="pressed" from="FinishNextLevelButton" to="." method="_on_next_level_pressed"]
[connection signal="focus_entered" from="FinishMenuButton" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="FinishMenuButton" to="." method="_on_finish_menu_button_focus_exited"]
[connection signal="gui_input" from="FinishMenuButton" to="." method="_on_finish_menu_button_gui_input"]
[connection signal="mouse_entered" from="FinishMenuButton" to="." method="_on_finish_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="FinishMenuButton" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="FinishMenuButton" to="." method="_on_menu_pressed"]
